--- a/index.html
+++ b/index.html
@@ -9,4 +9,15 @@
 </head>
 <body>
   <div class="container">
-    
+    <h1>Currency Converter</h1>
+    <div class="converter">
+      <input type="number" id="amount" placeholder="Enter amount">
+      <select id="fromCurrency"></select>
+      <select id="toCurrency"></select>
+      <button id="convertBtn">Convert</button>
+      <input type="text" id="searchInput" placeholder="Search currency">
+      <input type="text" id="customCurrencyInput" placeholder="Add custom currency">
+      <button id="addCurrencyBtn">Add</button>
+      <p id="result"></p>
+    </div>
+
