--- a/index.html
+++ b/index.html
@@ -20,4 +20,7 @@
       <button id="addCurrencyBtn">Add</button>
       <p id="result"></p>
     </div>
-
+    <script type="module" src="exchangeRates.js"></script>
+    <script type="module" src="currencies.js"></script>
+    <script type="module" src="app.js"></script>
+  </div>
