--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currency Converter</title>
+  <title>Foreign exchange rate |Currency Converter</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
